# CRIPTO-TP

./: .gitignore  CMakeLists.txt  README.md  bitmap.h  bmp.c  bmp.h  distribution.c  distribution.h  gj.c  global.h  io.c  io.h  main.c  makefile  matrix.c  matrix.h  modular.c  modular.h  paper-case.txt  random.c  random.h  recovery.c  recovery.h
src/: bitmap.h  distribution.c  distribution.h  global.h  io.c  io.h  main.c  matrix.c  matrix.h  modular.c  modular.h  random.c  random.h  recovery.c  recovery.h
